gcc/testsuite/gm2/iso/fail/constsubrange2.mod
MODULE constsubrange2 ;

VAR
   a: [10..20] ;
BEGIN
   a := 8 + 1
END constsubrange2.
